checkout changes; hide consent on mobile

--- a/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="[ Finalizar Encomenda ]" />
+                                <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="Finalizar Encomenda" />
                             </div>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
             <article class="row">
                 <section class="col-12">
                     <div class="dama-checkout-btn mb-3 float-right mt-3 mt-sm-0">
-                        <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="[ Finalizar Encomenda ]" />
+                        <input class="btn btn-default esh-basket-checkout p-1 m-auto" type="submit" value="Finalizar Encomenda" />
                     </div>
                 </section>
             </article>
