--- a/src/Web/DamaWeb/Pages/Search/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Search/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="news-heading text-center">
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
-<section class="esh-catalog-filters">
+@*<section class="esh-catalog-filters">
     <div class="container">
         <form method="get">
             <input type="hidden" name="q" value="@Model.SearchFor" />
@@ -22,7 +22,7 @@
             <input class="esh-catalog-send pt-1" type="image" src="~/images/arrow-right.svg" />
         </form>
     </div>
-</section>
+</section>*@
 <div class="container">
     <div class="esh-catalog-items row">
         @if (Model.CatalogModel.CatalogItems?.Count() > 0)
