--- a/src/Web/DamaWeb/wwwroot/css/basket/basket.component.css
+++ b/src/Web/DamaWeb/wwwroot/css/basket/basket.component.css
@@ -58,9 +58,9 @@
 }
 
 .esh-basket-checkout {
-    background-color: #f18e9b;
-    /*border: 0;
-    border-radius: 0;*/
+    background-color: #FC629D;
+    border: 0;
+    border-radius: 0;
     color: #FFFFFF;
     display: inline-block;
     font-size: 1rem;
@@ -72,10 +72,10 @@
     transition: all 0.35s;
 }
 
-.esh-basket-checkout:hover {
-    background-color: #e9495f;
-    transition: all 0.35s;
-}
+    .esh-basket-checkout:hover {
+        background-color: #FC2A7B;
+        transition: all 0.35s;
+    }
 
 @media (max-width: 576px) {
     .esh-basket-checkout {
