--- a/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
@@ -8,7 +8,7 @@
 
 @if (showBanner)
 {
-    <nav id="cookieConsent" class="navbar navbar-expand-md navbar-light bg-light fixed-bottom d-none d-sm-block" role="alert">
+    <nav id="cookieConsent" class="navbar navbar-expand-md navbar-light bg-light fixed-bottom" role="alert">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#cookieConsent" aria-controls="cookieConsent" aria-expanded="false" aria-label="Toggle navigation">
