--- a/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_CookieConsentPartial.cshtml
@@ -8,7 +8,7 @@
 
 @if (showBanner)
 {
-    <nav id="cookieConsent" class="navbar navbar-expand-md navbar-light bg-light fixed-bottom" role="alert">
+    <nav id="cookieConsent" class="navbar navbar-expand-md navbar-light bg-light d-none d-sm-block fixed-bottom" role="alert">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#cookieConsent" aria-controls="cookieConsent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,8 +21,8 @@
                     Para lhe podermos proporcionar os nossos serviços e a melhor experiência, a Damanojornal utiliza cookies neste site. Ao continuar no site está a consentir a sua utilização.
                 </p>
                 <div class="ml-auto">
-                    <a href="https://cookiesandyou.com/" target="_blank" class="btn btn-info navbar-btn btn-sm">Saber mais</a>
-                    <button type="button" class="btn btn-secondary navbar-btn btn-sm" data-cookie-string="@cookieString">Aceitar</button>
+                    <a asp-page="/Privacy" class="btn btn-dama-menta navbar-btn btn-sm">Saber mais</a>
+                    <button type="button" class="btn btn-dama-pink navbar-btn btn-sm" data-cookie-string="@cookieString">Aceitar</button>
                 </div>
             </div>
         </div>
