heart image fix, another cookie test

--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -64,7 +64,7 @@
 {
     <div class="news-heading text-center">
         <h2>Destaques</h2>
-        <img src="~/images/barra-coracao.png" />
+        <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
     <div class="container">
