--- a/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Checkout.cshtml
@@ -217,7 +217,7 @@
                 <section class="col-4 pl-0">@Model.BasketModel.SubTotal() €</section>
             </article>
             <article id="shipping-cost" class="row">
-                <section class="offset-2 col-6 text-right">Portes</section>
+                <section class="col-8 text-right"><small>Despesas de Envio</small></section>
                 <section class="col-4 pl-0 dama-product-price">@Model.BasketModel.DefaultShippingCost.ToString("N2")</section>
             </article>
             <article class="row">
