--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DamaWeb.Pages.Category.Type.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Model.CatalogTypeName;
 }
 <p class="title">@Model.CatalogTypeName</p>
 
