--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -51,8 +51,7 @@
         <div class="row mb-5">
             <div class="col-12 text-center mb-3">
                 <h4 class="mt-2">
-                    Escolhe uma ou duas cores<br />
-                    que mais gostes no quadro a baixo.
+                    Escolhe duas ou três cores que mais gostes no quadro a baixo.
                 </h4>
             </div>
             <div class="offset-sm-2 col-sm-8 pr-0">
