--- a/src/Web/DamaWeb/Pages/Order/Detail.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Detail.cshtml
@@ -128,8 +128,8 @@
         {
             <section class="esh-orders_detail-section esh-orders_detail-section--right mt-3">
                 <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                    <section class="esh-orders_detail-title col-9"></section>
-                    <section class="esh-orders_detail-title col-2">Portes</section>
+                    <section class="esh-orders_detail-title col-8"></section>
+                    <small><section class="esh-orders_detail-title col-12">Despesas de Envio</section></small>
                 </article>
 
                 <article class="esh-orders_detail-items row">
@@ -142,8 +142,8 @@
 
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                <section class="esh-orders_detail-title col-sm-9"></section>
-                <section class="esh-orders_detail-title col-sm-2 text-sm-right">TOTAL</section>
+                <section class="esh-orders_detail-title col-sm-8"></section>
+                <section class="esh-orders_detail-title col-sm-10 text-sm-right">TOTAL</section>
             </article>
 
             <article class="esh-orders_detail-items row">
