--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -27,6 +27,9 @@
                 </div>
             </div>
         </div>
+        <div class="col mt-4">            
+            <a href="javascript:history.go(-1)" class="link-dama-menta" >&larr; Voltar</a>
+        </div>
     </div>
     <div class="col-md-5">
         @await Html.PartialAsync("_productDetail", Model.ProductModel)
