--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -1,13 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <environment names="Production">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112025066-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-112025066-1');
+        </script>
+    </environment>    
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Loja</title>
 
     <environment names="Development">
         <link href="~/lib/slick/slick.css" rel="stylesheet" />
-        <link href="~/lib/slick/slick-theme.css" rel="stylesheet" />        
+        <link href="~/lib/slick/slick-theme.css" rel="stylesheet" />
         <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/app.css" />
         <link rel="stylesheet" href="~/css/app.component.css" />
@@ -18,15 +30,15 @@
         <link rel="stylesheet" href="~/css/orders/orders.component.css" />
         @*<link href="~/lib/slick-1.8.0/slick/slick-theme.css" rel="stylesheet" />*@
     </environment>
-    <environment names="Staging,Production">        
+    <environment names="Staging,Production">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css" />
 
         @*<link href="~/lib/slick/slick.min.css" rel="stylesheet" />
-        <link href="~/lib/slick/slick-theme.min.css" rel="stylesheet" />*@
+            <link href="~/lib/slick/slick-theme.min.css" rel="stylesheet" />*@
         <link rel="stylesheet" href="~/css/app.min.css" asp-append-version="true" />
     </environment>
-    
+
     @*<link rel="stylesheet" href="~/lib/slick-1.8.0/slick/slick.css" />*@
     @RenderSection("styles", required: false)
 </head>
@@ -56,20 +68,20 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-4 d-none d-sm-flex w-75">
+    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-none d-sm-flex w-75">
         <div class="d-flex d-sm-none dama-login-mobile pl-5">
             @await Html.PartialAsync("_LoginPartial")
-        </div>        
+        </div>
         <div class="navbar-collapse collapse justify-content-end text-center">
             <a asp-page="/Index" class="navbar-brand">
                 <h1>A Loja</h1>
             </a>
             @await Component.InvokeAsync("Menu")
         </div>
-        
+
     </nav>
-    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-4 d-flex d-sm-none">
-        <a id="brand-mobile-image" class="navbar-brand" href="https://www.damanojornal.com">
+    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-flex d-sm-none">
+        <a id="brand-mobile-image" asp-page="/Index" class="navbar-brand">
             <img src="~/images/brand.png" width="50px;" alt="Dama no Jornal" />
         </a>
         <ul class="list-inline ml-auto pr-1">
@@ -83,11 +95,15 @@
             @await Component.InvokeAsync("Menu")
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" asp-page="/Customize/Index">PERSONALIZAR</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#searchModal">PROCURAR</a>
                 </li>
             </ul>
         </div>
     </nav>
+
     <!-- Search Modal -->
     <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm" style="width:80%" role="document">
@@ -108,8 +124,9 @@
     </div>
 
     <partial name="_CookieConsentPartial" />
-
-    <div class="container body-content">
+    
+    <div class="container body-content ">
+        <hr />
         @RenderBody()
     </div>
 
@@ -138,7 +155,7 @@
                     </div>
                     <div class="text-center">
                         <a href="https://www.facebook.com/damanojornal/" class="px-2"><i class="fab fa-facebook-f fa-inverse"></i></a>
-                        <a href="https://www.instagram.com/damanojornal/"class="px-2"><i class="fab fa-instagram fa-inverse"></i></a>
+                        <a href="https://www.instagram.com/damanojornal/" class="px-2"><i class="fab fa-instagram fa-inverse"></i></a>
                     </div>
                     <div class="esh-app-footer-text footer-text-mobile"> © Copyright 2017 Dama no Jornal | All Rights Reserved </div>
                 </section>
@@ -147,10 +164,10 @@
     </footer>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>        
+        <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/js/bootstrap.js"></script>
         <script src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js"></script>
-        <script src="~/lib/slick/slick.js"></script>        
+        <script src="~/lib/slick/slick.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
