--- a/src/Web/DamaWeb/wwwroot/css/basket/basket-status/basket-status.component.css
+++ b/src/Web/DamaWeb/wwwroot/css/basket/basket-status/basket-status.component.css
@@ -27,7 +27,7 @@
 }
 
 .esh-basketstatus-badge {
-    background-color: #EF7C8D;
+    background-color: #FC629D;
     border-radius: 50%;
     color: #FFFFFF;
     display: block;
@@ -65,7 +65,7 @@
 }
 
 .esh-basketstatus:hover .esh-basketstatus-badge {
-    background-color: transparent;
+    background-color: #FC2A7B;
     color: #fff;
     transition: all 0.35s;
 }
