--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -84,11 +84,11 @@
 
     <small class="text-muted dama-small-text">Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)) para produtos em stock.</small>
 
-    <div class="text-center mb-1 mt-md-3 mb-md-3">
+    <div class="text-center my-3 my-sm-3">
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
-    <p class="dama-product-description mb-md-4">@Html.Raw(Model.ProductDescription)</p>
+    <p class="dama-product-description my-3 my-sm-3">@Html.Raw(Model.ProductDescription)</p>
 
     <hr />
     <div class="row dama-product-attr mt-2 mt-md-4">
