--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -32,7 +32,7 @@
                 <div class="row p-sm-3 dama-customize-cards ">
                     @foreach (var item in Model.CustomizeModel.Categories)
                     {
-                        <div class="col-sm-4 pt-3 category-block" cat-id="@item.Item1">
+                        <div class="col-6 col-sm-4 pt-3 category-block" cat-id="@item.Item1">
                             <div class="card card-block justify-content-center align-items-center @(item.Item1 == Model.CategoryId ? "dama-customize-menta" : "")">
                                 <h5 class="@(item.Item1 == Model.CategoryId ? "font-weight-bold" : "")">@item.Item2</h5>
                             </div>
@@ -51,7 +51,7 @@
                 <div class="row p-sm-3 dama-customize-cards product-types justify-content-center">
                     @for (int i = 0; i < Model.CustomizeModel.ProductTypes.Count; i++)
                     {
-                        <div class="col-sm-3 pt-3 product-block" catalog-type-id="@Model.CustomizeModel.ProductTypes[i].Id">
+                        <div class="col-6 col-sm-3 pt-3 product-block" catalog-type-id="@Model.CustomizeModel.ProductTypes[i].Id">
                             <div class="card card-block justify-content-center align-items-center" style="min-width:9rem">
                                 <img class="card-img-top" src="@Model.CustomizeModel.ProductTypes[i].PictureUri" alt="@Model.CustomizeModel.ProductTypes[i].Name">
                             </div>
