--- a/src/Web/DamaWeb/Pages/Basket/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Index.cshtml
@@ -100,7 +100,7 @@
 }
 else
 {
-    <div class="esh-catalog-items row">
+    <div class="esh-catalog-items row ml-3">
         O Carrinho está vazio.
     </div>
 }
