--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -54,4 +54,22 @@
             </div>
         </div>
     }
+    @if (Model.CategoryModel.CatalogModel.CatalogItems.Any())
+    {
+        <div class="news-heading text-center">
+            <h2>Todos os Produtos</h2>
+            <img class="separator" src="~/images/barra-coracao.png" />
+        </div>
+        <div class="container">
+            <div class="esh-catalog-items row">
+                @foreach (var catalogItem in Model.CategoryModel.CatalogModel.CatalogItems)
+                {
+                    <div class="esh-catalog-item col-md-3">
+                        @await Html.PartialAsync("_product", catalogItem)
+                    </div>
+                }
+            </div>
+        </div>
+        @await Html.PartialAsync("_pagination", Model.CategoryModel.CatalogModel.PaginationInfo)
+    }
 }
