fix social links

--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
     <div class="customize-image">
         <a asp-page="/Customize/Index"><img src="~/images/personalizar.png" width="250" /></a>
         <div class="row justify-content-center">
-            <div class="social-links"><a class="nav-link" href=""><i class="fab fa-facebook-f"></i></a></div>
-            <div class="social-links"><a class="nav-link" href=""><i class="fab fa-instagram"></i></a></div>
+            <div class="social-links"><a class="nav-link" href="https://www.facebook.com/damanojornal/" target="_blank"><i class="fab fa-facebook-f"></i></a></div>
+            <div class="social-links"><a class="nav-link" href="https://www.instagram.com/damanojornal/" target="_blank"><i class="fab fa-instagram"></i></a></div>
         </div>
     </div>
     <nav class="navbar navbar-expand-md navbar-light pt-0 pb-0 pl-5 pr-5 mr-5 d-none d-sm-flex pt-sm-3 w-75">
@@ -154,8 +154,8 @@
                         <a href="https://www.damanojornal.com/termos-e-condicoes/">Termos e Condições</a>
                     </div>
                     <div class="text-center">
-                        <a href="https://www.facebook.com/damanojornal/" class="px-2"><i class="fab fa-facebook-f fa-inverse"></i></a>
-                        <a href="https://www.instagram.com/damanojornal/" class="px-2"><i class="fab fa-instagram fa-inverse"></i></a>
+                        <a href="https://www.facebook.com/damanojornal/" class="px-2" target="_blank"><i class="fab fa-facebook-f fa-inverse"></i></a>
+                        <a href="https://www.instagram.com/damanojornal/" class="px-2" target="_blank"><i class="fab fa-instagram fa-inverse"></i></a>
                     </div>
                     <div class="esh-app-footer-text footer-text-mobile"> © Copyright 2018 Dama no Jornal | All Rights Reserved </div>
                 </section>
