--- a/src/Web/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Details.cshtml
@@ -54,6 +54,12 @@
             @Html.DisplayFor(model => model.ProductTypeModel.Price)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.AdditionalTextPrice)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.AdditionalTextPrice)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
         </dt>
         <dd>
