--- a/src/Web/Backoffice/Pages/ProductType/Index.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Index.cshtml
@@ -24,7 +24,10 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].Price)
-            </th>            
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductTypesModel[0].AdditionalTextPrice)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductTypesModel[0].DeliveryTimeMin)
             </th>
@@ -51,6 +54,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AdditionalTextPrice)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DeliveryTimeMin)
