fix mobile menu toggle item

--- a/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
@@ -11,7 +11,7 @@
         <a class="nav-link dropdown-toggle d-none d-sm-block" asp-page="/Category/Index" asp-route-id="@item.NameUri">
             @item.Name
         </a>
-        <a class="nav-link dropdown-toggle d-block d-sm-none" >
+        <a class="nav-link dropdown-toggle d-block d-sm-none" id="navbarDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             @item.Name
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
